k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-go-app
  annotations:
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: sie-demo-go-api.xgeeks.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-go-api
                port:
                  number: 3000
  tls:
    - hosts:
        - sie-demo-go-api.xgeeks.tech
      secretName: sie-demo-go-api-xgeeks-tech-tls # will be auto created
